--- a/static_HTML/less/shame.less
+++ b/static_HTML/less/shame.less
@@ -1,4 +1,15 @@
 .reviews-tab{
+  .content{
+    height: 423px;
+    overflow: auto;
+    padding: 0;
+    @media (min-width: @screen-sm) {
+      height: 469px;
+    }
+    @media (min-width: @screen-md) {
+      height: 319px;
+    }
+  }
   .rating-bar{
     background: @brand-primary;
     height: 55px;
@@ -34,10 +45,9 @@
   }
   .consumer-review{
     border-top: 1px solid #e5e5e5;
-    padding: 20px 0;
+    padding: 18px 0;
     &:first-child{
-      border: none;
-      padding-top: 10px;
+      border-color: transparent;
     }
     p{
       margin: 15px 0;
